Angular error - less file not loading

--- a/app/css/eirenerx.less
+++ b/app/css/eirenerx.less
@@ -238,6 +238,7 @@ panel li.active > a {
 		color:@ck_primary;
 	}
 	.nav_global {
+		background:red; 
 		border-bottom:1px solid #eee;
 		box-shadow: 0 1px 20px 3px #fff;
 		padding-left: 0; // overrides BS navbar padding to move logo left
