--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-lg-12 text-center m-t-md">
                 <h2>
-                    Welcome to Homer Theme
+                    Welcome to Beep Boop
                 </h2>
         
                 <p>
